RESOLVED FIXED35690
When the page is zoomed, the mouse double-click position is reported incorrectly
https://bugs.webkit.org/show_bug.cgi?id=35690
Summary When the page is zoomed, the mouse double-click position is reported incorrectly
Chad Faragher
Reported 2010-03-03 10:33:52 PST
When you zoom the page in or out and double-click, the coordinates of the mouse click are reported incorrectly (as received by the javascript ondblclick handler). The incorrect mouse coordinates are reported as if the page was never zoomed at all. Single-clicks are reported correctly. I suspect something is wrong with the treatment of double-clicks in the framework because single-clicks are reported with correct coordinates.
Attachments
patch to fix zoom double-click bug (4.97 KB, patch)
2010-03-03 11:13 PST, Chad Faragher
no flags
Chad Faragher
Comment 1 2010-03-03 11:13:09 PST
Created attachment 49925 [details] patch to fix zoom double-click bug
WebKit Commit Bot
Comment 2 2010-03-03 19:31:20 PST
Comment on attachment 49925 [details] patch to fix zoom double-click bug Clearing flags on attachment: 49925 Committed r55499: <http://trac.webkit.org/changeset/55499>
WebKit Commit Bot
Comment 3 2010-03-03 19:31:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.